# inflation_calculator

./: Cargo.toml
scripts/: run.sh
src/: calculator.rs  cpi_data.rs  lib.rs
src/cli/: main.rs
