[package]
name = "inflation_calculator"
version = "0.1.0"
edition = "2018"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust project to calculate inflation-adjusted amounts"
license = "MIT" # Or your chosen license

# Define your dependencies here
[dependencies]
reqwest = { version = "0.11", features = ["json"] } # For HTTP requests
serde = { version = "1.0", features = ["derive"] } # For serializing/deserializing data
tokio = { version = "1", features = ["full"] } # Async runtime

# Binaries configuration
[[bin]]
name = "inflation_calculator_cli"
path = "src/cli/main.rs"

[[bin]]
name = "inflation_calculator_gui"
path = "src/gui/main.rs"

# Library configuration
[lib]
path = "src/lib.rs"
